--- a/view/src/components/styles.css
+++ b/view/src/components/styles.css
@@ -6,6 +6,7 @@ body {
     width: 100%;
     padding: 0;
     margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 .flex-item {
     width: 100px;
