--- a/view/index.html
+++ b/view/index.html
@@ -10,6 +10,9 @@
 <body>
     <div id="root"></div>
 
+    <script>
+        require('./renderer.js');
+    </script>
     <script src="../dist/index.js"></script>
 </body>
 </html>
