--- a/view/src/components/input/styles.css
+++ b/view/src/components/input/styles.css
@@ -1,56 +1,56 @@
 .search-button {
-    width: 60px;
-    height: 60px;
-    background-color: white;
-    cursor: pointer;
-    transition: all .5s ease-in-out;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    z-index: 10;
+  width: 60px;
+  height: 60px;
+  background-color: white;
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  z-index: 10;
 }
 
 .not-activated {
-    border-radius: 50%;
-    box-shadow: 3px 9px 71px -13px rgba(59,59,59,0.85);
+  border-radius: 50%;
+  box-shadow: 3px 9px 71px -13px rgba(59, 59, 59, 0.85);
 }
 
 .activated {
-    border-radius: 20%;
-    box-shadow: none;
+  border-radius: 20%;
+  box-shadow: none;
 }
 
 .not-activated:hover {
-    box-shadow: 3px 9px 71px -8px rgba(59,59,59,0.85);
+  box-shadow: 3px 9px 71px -8px rgba(59, 59, 59, 0.85);
 }
 
 .search-icon {
-    width: 75%;
-    height: 75%;
-    opacity: .6;
+  width: 75%;
+  height: 75%;
+  opacity: 0.6;
 }
 
 .search-input {
-    position: relative;
-    top: -60px;
-    z-index: 0;
-    height: 60px;
-    border: none;
-    box-shadow: 3px 9px 71px -13px rgba(59,59,59,0.85);
-    border-radius: 10px;
-    padding-left: 70px;
-    font-size: 20px;
-    transition: all .5s ease-in-out;
-    color: rgba(33, 33, 33, .7);
+  position: relative;
+  top: -60px;
+  z-index: 0;
+  height: 60px;
+  border: none;
+  box-shadow: 3px 9px 71px -13px rgba(59, 59, 59, 0.85);
+  border-radius: 10px;
+  padding-left: 70px;
+  font-size: 20px;
+  transition: all 0.5s ease-in-out;
+  color: rgba(33, 33, 33, 0.7);
 }
 
 .input-activated {
-    width: 250px;
-    opacity: 1;
+  width: 250px;
+  opacity: 1;
 }
 
 .input-not-activated {
-    opacity: 0;
-    width: 0px;
+  opacity: 0;
+  width: 0px;
 }
