--- a/view/src/components/styles.css
+++ b/view/src/components/styles.css
@@ -1,28 +1,28 @@
 .container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    height: 100vh;
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    font-family: 'Roboto', sans-serif;
-    vertical-align: top;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  height: 100vh;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+  vertical-align: top;
 }
 .flex-item {
-    /* width: 100px; */
-    /* height: 100px; */
-    transform-origin: 50% 50%;
-    border: 1px solid red;
+  /* width: 100px; */
+  /* height: 100px; */
+  transform-origin: 50% 50%;
+  border: 1px solid red;
 }
-input{
-    font-family: 'Roboto', sans-serif;
+input {
+  font-family: "Roboto", sans-serif;
 }
 input:focus {
-    outline: none !important;
+  outline: none !important;
 }
 .choose-folder-block > img {
-    /* width: 70%; */
-    /* height: 70%; */
+  /* width: 70%; */
+  /* height: 70%; */
 }
