--- a/view/src/components/styles.css
+++ b/view/src/components/styles.css
@@ -2,27 +2,30 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: row;
   height: 100vh;
   width: 100%;
   padding: 0;
   margin: 0;
   font-family: "Roboto", sans-serif;
-  vertical-align: top;
 }
+
 .flex-item {
-  /* width: 100px; */
-  /* height: 100px; */
   transform-origin: 50% 50%;
-  border: 1px solid red;
 }
+
 input {
   font-family: "Roboto", sans-serif;
 }
+
 input:focus {
   outline: none !important;
 }
-.choose-folder-block > img {
-  /* width: 70%; */
-  /* height: 70%; */
+
+.choose-folder-block {
+  height: 60px;
+}
+
+.choose-folder-block__image {
+  height: 100%;
+  margin-left: 15px;
 }
